--- a/css/styles.css
+++ b/css/styles.css
@@ -181,7 +181,7 @@
   .card__img {
     width: 100%;
     height: 150px;
-    background-image: url(/img/proyect1.png);
+    background-image: url(../img/proyect1.png);
     background-size: cover;
   }
   
@@ -335,7 +335,7 @@
   .card__img {
     width: 100%;
     height: 150px;
-    background-image: url(../img/2-original.png);
+    background-image: url(../img/proyect1.png);
     background-size: cover;
   }
   
