--- a/css/styles.css
+++ b/css/styles.css
@@ -178,10 +178,24 @@
     margin: 1em;
   }
   
-  .card__img {
+  .card__img-1 {
     width: 100%;
     height: 150px;
     background-image: url(../img/proyect1.png);
+    background-size: cover;
+  }
+
+  .card__img-2 {
+    width: 100%;
+    height: 150px;
+    background-image: url(../img/proyect2.png);
+    background-size: cover;
+  }
+
+  .card__img-3 {
+    width: 100%;
+    height: 150px;
+    background-image: url(../img/proyect3.png);
     background-size: cover;
   }
   
